[gd_scene load_steps=4 format=3 uid="uid://brt137ffwnxgp"]

[ext_resource type="FontFile" uid="uid://cwd1tkm36irny" path="res://assets/pixel_font.ttf" id="1_y26ei"]
[ext_resource type="Script" uid="uid://cvhobs8mmrdt5" path="res://game_over.gd" id="1_yxx3c"]
[ext_resource type="AudioStream" uid="uid://bkk6pr84kkddb" path="res://assets/audio/MenuClick.wav" id="3_ccer4"]

[node name="GameOver" type="CanvasLayer"]
script = ExtResource("1_yxx3c")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -199.5
offset_top = -112.0
offset_right = 199.5
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.223103, 0.223103, 0.223103, 1)

[node name="MenuButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = 44.0
offset_right = 36.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_y26ei")
text = "Menu"

[node name="WinnerMessage" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -143.0
offset_top = -30.0
offset_right = 143.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_y26ei")
theme_override_font_sizes/font_size = 25
text = "You Won"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverMessage" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -264.0
offset_top = -92.0
offset_right = 276.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_y26ei")
theme_override_font_sizes/font_size = 20
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ccer4")

[connection signal="pressed" from="MenuButton" to="." method="_on_menu_button_pressed"]
